--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Faustina:wght@300;400;500&family=Merriweather+Sans&family=Montserrat:ital,wght@0,400;0,500;0,900;1,100;1,900&family=Open+Sans:wght@500;700&family=Oswald&family=Sacramento&display=swap" rel="stylesheet">
 <!-- <link rel="bootstrap" href="bootstrap.css"> -->
     <title>MTS</title>
-    <link rel="stylesheet" href="C:\web dev\Bootstrap\bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
   </head>
   <body>
 <section id="title">
